--- a/css/main.css
+++ b/css/main.css
@@ -7,16 +7,16 @@ html {
 }
 
 body {
-  background-color: #f2f2f2;
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
   line-height: 1.5;
 }
 
-h2 {
+.h2 {
   text-align: center;
-  font-size: 1rem;
+  font-size: 2rem;
+  padding: 0;
 }
 
 img {
@@ -38,21 +38,23 @@ img {
 }
 
 article {
-  border-left: 2px solid #000;
+  border-left: 2px solid #333;
   width: 25%;
-  padding: .75rem;
   flex-wrap: nowrap;
   flex-grow: 1;
   flex-direction: column;
   display: flex;
+  margin: 0 0 1.5rem;
+  padding: .75rem;
 }
 
 section {
   display: flex;
+  background-color: #f2f2f2;
 }
 
 .btn {
-  background-color: #333;
+  background-color: #000;
   color: #fff;
   border-radius: 8px;
   text-decoration: none;
@@ -87,10 +89,6 @@ section {
   background-color: #999;
 }
 
-.h2 {
-  font-size: 2rem;
-}
-
 p {
   margin-top: 0;
   font-size: 1rem;
@@ -98,4 +96,8 @@ p {
 
 h3 {
   margin-bottom: 0;
+}
+
+.right {
+  border-right: 2px solid #000;
 }
