--- a/css/main.css
+++ b/css/main.css
@@ -1,72 +1,78 @@
 html {
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-}
-
-header {
-  background-color: #f2f2f2;;
-}
-
 h2 {
   text-align: center;
   font-size: 2rem;
-  padding: 0;
-  margin: 0;
+  margin-top: 0;
 }
 
-.h2 {
-  padding: 1.5rem;
+body {
+  margin: 0;
+  line-height: 1.5;
 }
 
 img {
-  width: 100%;
+  margin: 0;
   width: 100px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  flex-wrap: nowrap;
-  text-align: center;
 }
 
-.content {
-  flex-wrap: nowrap;
-  font-size: .875rem;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-article {
-  border-left: 2px solid #333;
-  width: 25%;
-  flex-wrap: nowrap;
-  flex-grow: 1;
-  flex-direction: column;
+.columns {
   display: flex;
-  margin: 0 auto 1.5rem;
+}
+
+.columns div {
+  width: 25%;
   padding: .75rem;
-  align-items: stretch;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  border-left: 2px solid #999;
+}
+
+.columns p {
+  flex-grow: 1;
+  margin-top: 0;
+}
+
+.columns h3 {
+  margin-bottom: 0;
+}
+
+.anderon {
+  background-color: #e2e2e2;
+}
+
+.dinosaur {
+  background-color: #ccc;
+}
+
+.dragon {
+  background-color: #aaa;
+}
+
+.ships {
+  background-color: #999;
+  border-right: 2px solid #999;
 }
 
 section {
-  display: flex;
+  padding: 1.5rem;
+  background-color: #f2f2f2;
 }
-
 .btn {
   background-color: #333;
   color: #fff;
   border-radius: 8px;
   text-decoration: none;
   display: block;
-  font-size: 1.125rem;
+  font-size: .875rem;
   padding: .75rem;
 }
 
@@ -76,39 +82,4 @@ section {
 
 .btn-small {
   font-size: .875rem;
-}
-
-.dino {
-  background-color: #ccc;
-}
-
-.anderson {
-  background-color: #e2e2e2;
-}
-
-.dragon {
-  background-color: #aaa;
-}
-
-.ships {
-  background-color: #999;
-}
-
-h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-p {
-  margin: 0;
-  font-size: 1rem;
-}
-
-.right {
-  border-right: 2px solid #000;
-  margin-right: 1.5rem;
-}
-
-.left {
-  margin-left: 1.5rem;
 }
