--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 *, *::before, *::after {
@@ -20,7 +20,11 @@ body {
 
 img {
   margin: 0;
+  width: 100%;
   width: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .columns {
@@ -66,6 +70,7 @@ section {
   padding: 1.5rem;
   background-color: #f2f2f2;
 }
+
 .btn {
   background-color: #333;
   color: #fff;
